--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,10 +1,13 @@
-# name: Node.js CI
-
+name: Test
 on:
   push:
     branches: [ main ]
+    paths:
+      - 'tests/**'
   pull_request:
     branches: [ main ]
+    paths:
+      - 'tests/**'
 
 jobs:
   build:
