--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -30,6 +30,7 @@ jobs:
           sudo snap install solc
           python -m pip install --upgrade pip
           pip3 install solc-select
+          solc-select install 0.8.0
           solc-select use 0.8.0
       - name: Test with slither
         run: |
