--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -29,7 +29,7 @@ jobs:
         run: |
           sudo snap install solc
           python -m pip install --upgrade pip
-          pip3 install solc-select
+          pip3 install solc-select slither-analyzer
           solc-select install 0.8.0
           solc-select use 0.8.0
       - name: Test with slither
