--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -18,20 +18,28 @@ jobs:
     strategy:
       matrix:
         python-version: [3.8, 3.9]
+        node-version: [14.x]
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v2
-        with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          sudo snap install solc
-          python -m pip install --upgrade pip
-          pip3 install solc-select slither-analyzer
-          solc-select install 0.8.0
-          solc-select use 0.8.0
-      - name: Test with slither
-        run: |
-          slither .
+    - uses: actions/checkout@v2
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v1
+      with:
+        node-version: ${{ matrix.node-version }}
+    - run: yarn install
+    - run: yarn compile
+
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Install dependencies
+      run: |
+        sudo snap install solc
+        python -m pip install --upgrade pip
+        pip3 install solc-select slither-analyzer
+        solc-select install 0.8.0
+        solc-select use 0.8.0
+    - name: Test with slither
+      run: |
+        slither .
