--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -37,9 +37,16 @@ jobs:
       run: |
         sudo snap install solc
         python -m pip install --upgrade pip
-        pip3 install solc-select slither-analyzer
+        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
         solc-select install 0.8.0
         solc-select use 0.8.0
+        pip install flake8 pytest
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with slither
       run: |
         python main.py
