--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -49,5 +49,4 @@ jobs:
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     - name: Test with slither
       run: |
-        python main.py
-        curl localhost:8000
+        python report.py
