--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -45,7 +45,10 @@ jobs:
       run: |
         echo "Running slither"
         python report.py
-    - uses: actions/upload-artifact@v2
-      with:
-        name: my-artifact
-        path: data/sample.json
+    steps:
+      - id: upload-file
+        uses: google-github-actions/upload-cloud-storage@main
+        with:
+          credentials: ${{ secrets.gcp_credentials }}
+          path: data/sample.json
+          destination: ${{ secrets.BUCKET_NAME }}/security/sample.json
