--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -41,11 +41,18 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
           solc-select install 0.8.0
           solc-select use 0.8.0
-      - name: Test with slither
+      - name: Summary of static ananlysis
         run: |
           echo "Running slither"
           slither . --print human-summary
-
+      - name: Contract summary of static ananlysis
+        run: |
+          echo "Running slither"
+          slither . --print contract-summary
+      - name: Data dependency
+        run: |
+          echo "Running slither"
+          slither . --print data-dependency
       # python report.py
       # - id: upload-file
       #   uses: google-github-actions/upload-cloud-storage@main
