--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -39,8 +39,8 @@ jobs:
           sudo snap install solc
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          solc-select install 0.8.0
-          solc-select use 0.8.0
+        # solc-select install 0.8.0
+        # solc-select use 0.8.0
       - name: Summary of static ananlysis
         run: |
           echo "Running slither"
