--- a/.github/workflows/slither.yaml
+++ b/.github/workflows/slither.yaml
@@ -39,8 +39,6 @@ jobs:
           sudo snap install solc
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-        # solc-select install 0.8.0
-        # solc-select use 0.8.0
       - name: Summary of static ananlysis
         run: |
           echo "Running slither"
@@ -58,10 +56,18 @@ jobs:
       - name: Inheritance
         run: |
           slither . --print inheritance
-      # python report.py
-      # - id: upload-file
-      #   uses: google-github-actions/upload-cloud-storage@main
-      #   with:
-      #     credentials: ${{ secrets.gcp_credentials }}
-      #     path: data/sample.json
-      #     destination: ${{ secrets.BUCKET_NAME }}/security
+      - name: Save the result as a SARIF json file
+        run: |
+          slither . --sarif results.sarif
+      - uses: github/codeql-action/upload-sarif@v1
+        with:
+          # Path to SARIF file relative to the root of the repository
+          sarif_file: results.sarif
+
+      python report.py
+      - id: upload-file
+        uses: google-github-actions/upload-cloud-storage@main
+        with:
+          credentials: ${{ secrets.gcp_credentials }}
+          path: results.sarif
+          destination: ${{ secrets.BUCKET_NAME }}/security
