--- a/.github/workflows/slither.yml
+++ b/.github/workflows/slither.yml
@@ -1,79 +1,64 @@
-name: Static Analysis
-#on:
-  #push:
-    #branches: [ main ]
-    #paths:
-      #- 'contracts/**'
-      #- '.github/workflows/slither.yaml'
-      #- "**.py"
-  #pull_request:
-    #branches: [ main ]
-    #paths:
-     # - 'contracts/**'
-      #- '.github/workflows/slither.yaml'
-      
-
+# Slither CI Action v1.2.1
+name: slither
 on:
   push:
-    branches:
-      - main
-
+    paths:
+      - "**.sol"
+      - ".github/workflows/slither.yml"
 jobs:
-  build:
-
+  slither:
     runs-on: ubuntu-latest
+
+
     strategy:
+      fail-fast: false
       matrix:
-        python-version: [3.8, 3.9]
-        node-version: [14.x]
+        node: ["14.x"]
+        os: ["ubuntu-latest"]
+
 
     steps:
       - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Nodejs 14.x
+        uses: actions/setup-node@v2
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: yarn install
-      - run: yarn compile
+          node-version: "14.x"
+          check-latest: true
 
-      - name: Set up Python ${{ matrix.python-version }}
+
+      - name: Install Hardhat
+        id: compile:contracts
+        run: |
+          npm ci
+          npx hardhat compile
+      - name: Set up Python 3.8
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Install dependencies
-        run: |
-          sudo snap install solc
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-      - name: Summary of static ananlysis
-        run: |
-          echo "Running slither"
-          slither . --print human-summary
-      - name: Contract summary of static ananlysis
-        run: |
-          echo "Running slither"
-          slither . --print contract-summary
-      - name: Function summary
-        run: |
-          slither . --print function-summary
-      - name: Data dependency
-        run: |
-          slither . --print data-dependency
-      - name: Inheritance
-        run: |
-          slither . --print inheritance
-      - name: Save the result as a SARIF json file
-            #  slither . --json - --sarif results.sarif
-        run: |
-            python report.py
-      - uses: github/codeql-action/upload-sarif@v1
-        with:
-          # Path to SARIF file relative to the root of the repository
-          sarif_file: data/test.sarif
+          python-version: 3.8
 
-      # - id: upload-file
-      #   uses: google-github-actions/upload-cloud-storage@main
-      #   with:
-      #     credentials: ${{ secrets.gcp_credentials }}
-      #     path: results.sarif
-      #     destination: ${{ secrets.BUCKET_NAME }}/security
+
+      - name: Install Slither
+        run: pip3 install slither-analyzer
+      - name: Prepare output
+        run: |
+          mkdir -p .github/slither-output
+      - name: Run analysis
+        id: slither:analysis
+        shell: bash
+        run: |
+          slither . --json-types compilations,console,detectors,printers,list-detectors,list-printers --exclude-dependencies --compile-force-framework hardhat >>.github/slither-output/slither_report.txt 2>&1 || true
+        # more complicated example
+        # slither --exclude=divide-before-multiply,unused-return,timestamp,naming-convention,pragma,solc-version,external-function,reentrancy-benign,reentrancy-no-eth,arbitrary-send,incorrect-equality,reentrancy-events,assembly,uninitialized-local --filter-paths="@openzeppelin|WETH9.sol|uniswapV2"
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v2
+        with:
+          name: slither-report
+          path: .github/slither-output/slither_report.txt
+      - name: Check status
+        id: coverage:status 
+        shell: bash
+        run: |
+          FALSE_POSITIVE_WARNINGS=7
+          FOUND_WARNINGS=`grep "\d+ result" -Po .github/slither-output/slither_report.txt | sed 's/ result//g'`
+          echo "Slither Analysis $FOUND_WARNINGS issues"
+          if [[ $FOUND_WARNINGS -gt $FALSE_POSITIVE_WARNINGS ]]; then echo "$FOUND_WARNINGS issues exceeds limit" >&2; exit 1; fi
